--- a/apps/builder/src/i18n/locale/ru-RU.json
+++ b/apps/builder/src/i18n/locale/ru-RU.json
@@ -610,7 +610,9 @@
               "global-data": "Глобальные данные",
               "ai-agent": "AI Agent",
               "more": "Ещё",
-              "create-resource": "Создать из ресурса"
+              "create-resource": "Создать из ресурса",
+              "unsafe": "Небезопасный",
+              "safe": "Безопасный"
             }
           },
           "restapi": {
@@ -655,6 +657,9 @@
             },
             "global-data": {
               "how-to-use": "Использовать эти глобальные данные {{globalData.state1}}"
+            },
+            "general": {
+              "safe_mode": "При использовании безопасного режима SQL может ссылаться только на переменные вместо переменных, например, где имя = '{{input1.value}}'. Это мешает пользователям скомпрометировать базу данных, вводя такие операторы как '; удаление таблицы;' в input1. При использовании небезопасного режима синтаксические слова SQL также могут быть заменены переменными, такие как где {{input1.value}} {{input2.value}} '{{input3.value}}'. Однако, в этом случае база данных может быть скомпрометирована содержанием, введенным пользователем. Не рекомендуется использовать этот режим."
             }
           },
           "advanced": {
@@ -695,7 +700,8 @@
           },
           "general": {
             "connect-data-source": "Подключиться к базе данных или api",
-            "more-type": "Больше типов источников данных"
+            "more-type": "Больше типов источников данных",
+            "safe_mode": "Режим"
           }
         },
         "menu": {
@@ -1295,7 +1301,8 @@
           "onMenuSelect": "Выберите элемент",
           "on_menu_select": "Выберите пункт меню",
           "pageChange": "Изменение страницы",
-          "clickItem": "Щелкните по элементу"
+          "clickItem": "Щелкните по элементу",
+          "columnVisibilityChange": "Изменение видимости столбцов"
         },
         "image_list": {
           "title": "Изображения",
@@ -3168,6 +3175,9 @@
     },
     "iframe": {
       "name": "IFrame"
+    },
+    "data_grid": {
+      "name": "Сетка данных"
     }
   },
   "page": {
