--- a/apps/builder/src/i18n/locale/sv-SE.json
+++ b/apps/builder/src/i18n/locale/sv-SE.json
@@ -610,7 +610,9 @@
               "global-data": "Globala data",
               "ai-agent": "AI Agent",
               "more": "Mer",
-              "create-resource": "Skapa från resurs"
+              "create-resource": "Skapa från resurs",
+              "unsafe": "Osäker",
+              "safe": "Säker"
             }
           },
           "restapi": {
@@ -655,6 +657,9 @@
             },
             "global-data": {
               "how-to-use": "Använd denna globala data av {{globalData.state1}}"
+            },
+            "general": {
+              "safe_mode": "När du använder felsäkert läge kan din SQL endast referera variabler i stället för variabler, till exempel där namn = '{{input1.value}}'. Detta förhindrar användare från att kompromettera din databas genom att lägga in påståenden som \"; släpp tabell\" i input1. När du använder det osäkra läget kan SQL syntax ord också ersättas med variabler, t.ex. var {{input1.value}} {{input2.value}} '{{input3.value}}'. I detta fall kan dock databasen äventyras av det innehåll som användaren angett. Det rekommenderas inte att du använder det här läget."
             }
           },
           "advanced": {
@@ -695,7 +700,8 @@
           },
           "general": {
             "connect-data-source": "Anslut till databas eller api",
-            "more-type": "Fler typer av datakällor"
+            "more-type": "Fler typer av datakällor",
+            "safe_mode": "Läge"
           }
         },
         "menu": {
@@ -1295,7 +1301,8 @@
           "onMenuSelect": "Välj objekt",
           "on_menu_select": "Välj menyobjekt",
           "pageChange": "Ändrad sida",
-          "clickItem": "Klicka på objekt"
+          "clickItem": "Klicka på objekt",
+          "columnVisibilityChange": "Ändra kolumnsynlighet"
         },
         "image_list": {
           "title": "Bilder",
@@ -3168,6 +3175,9 @@
     },
     "iframe": {
       "name": "IFrame"
+    },
+    "data_grid": {
+      "name": "Data rutnät"
     }
   },
   "page": {
