--- a/apps/builder/src/i18n/locale/fi-FI.json
+++ b/apps/builder/src/i18n/locale/fi-FI.json
@@ -610,7 +610,9 @@
               "global-data": "Globaalit tiedot",
               "ai-agent": "AI Agent",
               "more": "Lisää",
-              "create-resource": "Luo resurssista"
+              "create-resource": "Luo resurssista",
+              "unsafe": "Epäturvallinen",
+              "safe": "Turvallinen"
             }
           },
           "restapi": {
@@ -655,6 +657,9 @@
             },
             "global-data": {
               "how-to-use": "Käytä näitä yleisiä tietoja {{globalData.state1}}"
+            },
+            "general": {
+              "safe_mode": "When using the safe mode, your SQL can only reference variables in the place of variables, for example, where name = '{{input1.value}}'. This prevents users from compromising your database by inputting statements like '; drop table;' in input1. When using the unsafe mode, SQL syntax words can also be replaced with variables, such as where {{input1.value}} {{input2.value}} '{{input3.value}}'. However, in this case, the database can be compromised by the content entered by the user. It is not recommended for you to use this mode."
             }
           },
           "advanced": {
@@ -695,7 +700,8 @@
           },
           "general": {
             "connect-data-source": "Yhdistä tietokantaan tai apiin",
-            "more-type": "Enemmän tietolähteitä"
+            "more-type": "Enemmän tietolähteitä",
+            "safe_mode": "Tila"
           }
         },
         "menu": {
@@ -1295,7 +1301,8 @@
           "onMenuSelect": "Valitse kohde",
           "on_menu_select": "Valitse valikon kohta",
           "pageChange": "Sivun muutos",
-          "clickItem": "Napsauta kohdetta"
+          "clickItem": "Napsauta kohdetta",
+          "columnVisibilityChange": "Sarakkeen näkyvyyden muutos"
         },
         "image_list": {
           "title": "Kuvat",
@@ -3168,6 +3175,9 @@
     },
     "iframe": {
       "name": "IFrame"
+    },
+    "data_grid": {
+      "name": "Dataruudukko"
     }
   },
   "page": {
