--- a/apps/builder/src/i18n/locale/zh-CN.json
+++ b/apps/builder/src/i18n/locale/zh-CN.json
@@ -610,7 +610,9 @@
               "global-data": "全局变量",
               "ai-agent": "AI Agent",
               "more": "更多",
-              "create-resource": "从数据源创建"
+              "create-resource": "从数据源创建",
+              "unsafe": "不安全",
+              "safe": "安全"
             }
           },
           "restapi": {
@@ -655,6 +657,9 @@
             },
             "global-data": {
               "how-to-use": "通过{{globalData.state1}}来使用这个全局变量"
+            },
+            "general": {
+              "safe_mode": "使用safe模式时，您的SQL只能在变量的位置引用变量，例如where name = '{{input1.value}}'。这使得使用者无法通过在input1中输入 ; drop table; 等方式来破坏您的数据库；使用Unsafe模式时，SQL语法词也可以替换为变量，如where {{input1.value}} {{input2.value}} '{{input3.value}}'，但这样一来数据库可能被用户输入的内容破坏，不建议您使用"
             }
           },
           "advanced": {
@@ -695,7 +700,8 @@
           },
           "general": {
             "connect-data-source": "连接到数据库或API",
-            "more-type": "更多连接方式"
+            "more-type": "更多连接方式",
+            "safe_mode": "模式"
           }
         },
         "menu": {
@@ -1295,7 +1301,8 @@
           "onMenuSelect": "选中菜单项",
           "on_menu_select": "选择菜单项",
           "pageChange": "页面更改",
-          "clickItem": "点击项目"
+          "clickItem": "点击项目",
+          "columnVisibilityChange": "变更列是否可见"
         },
         "image_list": {
           "title": "图片",
@@ -3168,6 +3175,9 @@
     },
     "iframe": {
       "name": "IFrame"
+    },
+    "data_grid": {
+      "name": "数据表"
     }
   },
   "page": {
