[ci skip] New Crowdin translations (#3055)

--- a/apps/builder/src/i18n/locale/el-GR.json
+++ b/apps/builder/src/i18n/locale/el-GR.json
@@ -79,7 +79,13 @@
       "mobile-fork-suc": "Επιτυχής επεξεργασία. Παρακαλώ επεξεργαστείτε στην επιφάνεια εργασίας.",
       "save_resource": "Αποθήκευση επιτυχής, η σελίδα θα κλείσει σε 3 δευτερόλεπτα..."
     },
-    "create": "Δημιουργία"
+    "create": "Δημιουργία",
+    "pwa": {
+      "guide": {
+        "title": "Προσθέστε ILLA Cloud στην επιφάνεια εργασίας σας",
+        "desc": "Προσθέστε στην επιφάνεια εργασίας σας για να αποκτήσετε πρόσβαση στο χώρο εργασίας σας γρήγορα. "
+      }
+    }
   },
   "dayjs": {
     "just_now": "Μόλις τώρα"
@@ -1849,12 +1855,14 @@
         "allow_row_selection": "Επιτρέπεται η επιλογή γραμμής",
         "selection_mode": "Λειτουργία επιλογής",
         "pin_column": "Καρφίτσωμα στήλης",
-        "enable_users_to_sort": "Ενεργοποίηση των χρηστών για ταξινόμηση",
         "enable_users_to_pin": "Ενεργοποίηση χρηστών για pin",
         "enable_users_to_filter": "Ενεργοποίηση χρηστών για φιλτράρισμα",
         "enable_users_to_hide": "Ενεργοποίηση των χρηστών για απόκρυψη",
         "enable_users_to_set_group_by": "Ενεργοποιήστε τους χρήστες για να ορίσετε ομάδα κατά",
-        "column_description": "Περιγραφή"
+        "column_description": "Περιγραφή",
+        "enable_users_to_aggregate": "Ενεργοποίηση των χρηστών για ομαδοποίηση",
+        "disable_users_to_sort": "Ενεργοποίηση των χρηστών για ταξινόμηση",
+        "enable_users_to_resize": "Ενεργοποιήστε τους χρήστες για αλλαγή μεγέθους"
       },
       "setter_tooltip": {
         "action": "Οι ενέργειές σας στα στοιχεία ενεργοποιούν ερωτήματα, ελέγχουν τα στοιχεία ή καλούν τα δεδομένα στους πόρους σας. Πολλαπλές ενέργειες async θα εκτελεστούν παράλληλα.",
@@ -2147,13 +2155,13 @@
         "selection_mode": "Χρησιμοποιείται για τον ορισμό πολλαπλής επιλογής γραμμών ή επιλογής μίας γραμμής",
         "allow_row_selection": "Χρησιμοποιείται για να ορίσετε αν οι χρήστες θα μπορούν ή όχι να επιλέγουν γραμμή",
         "pin_column": "Χρησιμοποιείται για να καρφιτσώσει τη στήλη σε όλους τους χρήστες",
-        "enable_users_to_sort": "Χρησιμοποιείται για να ορίσετε αν οι χρήστες επιτρέπουν ή όχι την αλλαγή της ταξινόμησης αυτής της στήλης. ",
         "enable_users_to_pin": "Χρησιμοποιείται για να ορίσετε αν οι χρήστες επιτρέπουν ή όχι να καρφιτσώσουν τη στήλη",
         "enable_users_to_filter": "Χρησιμοποιείται για να ορίσετε αν οι χρήστες επιτρέπουν ή όχι να φιλτράρουν σε αυτή τη στήλη",
         "enable_users_to_hide": "Χρησιμοποιείται για να ορίσετε αν οι χρήστες θα μπορούν ή όχι να αποκρύπτουν τη στήλη",
         "enable_users_to_aggregate": "Χρησιμοποιείται για να οριστεί αν οι χρήστες επιτρέπουν ή όχι την εκτέλεση συγκέντρωσης δεδομένων σε αυτή τη στήλη.",
         "enable_users_to_set_group_by": "Χρησιμοποιείται για να ορίσετε αν θα επιτρέπεται ή όχι στους χρήστες να δημιουργήσουν την οθόνη ομαδοποίησης δεδομένων. ",
-        "column_description": "Χρησιμοποιείται για να ορίσετε μια περιγραφή αυτής της στήλης"
+        "column_description": "Χρησιμοποιείται για να ορίσετε μια περιγραφή αυτής της στήλης",
+        "disable_users_to_sort": "Χρησιμοποιείται για να ορίσετε αν οι χρήστες επιτρέπουν ή όχι την αλλαγή της ταξινόμησης αυτής της στήλης. "
       },
       "setter_option": {
         "fixed": "Σταθερό",
@@ -2221,7 +2229,27 @@
           "limited": "Περιορισμένη",
           "limit_offset_based": "Μετατόπιση ορίου",
           "cursor_based": "Δρομέας με βάση",
-          "graphql_relay_cursor": "GraphQL Relay cursor-based"
+          "graphql_relay_cursor": "GraphQL Relay cursor-based",
+          "column_type": {
+            "auto": "Auto",
+            "text": "Text",
+            "date": "Date",
+            "tag": "Tag",
+            "time": "Time",
+            "datetime": "Date time",
+            "number": "Number",
+            "percent": "Percent",
+            "link": "Link",
+            "button": "Button",
+            "buttongroup": "Button group",
+            "boolean": "Boolean",
+            "image": "Image",
+            "icongroup": "Icon group",
+            "rating": "Rating",
+            "markdown": "Markdown",
+            "html": "Html",
+            "currency": "Currency"
+          }
         },
         "input": {
           "input": "Input",
