--- a/apps/builder/src/i18n/locale/en-US.json
+++ b/apps/builder/src/i18n/locale/en-US.json
@@ -210,7 +210,8 @@
           },
           "oracle": {
             "sid": "Treat Database name as",
-            "ssl": "SSL"
+            "ssl": "SSL",
+            "version": "Oracle version"
           },
           "couchdb": {
             "ssl": "SSL/TLS"
@@ -359,7 +360,11 @@
               "sid": "SID",
               "service": "Service Name"
             },
-            "ssl": "Use SSL when available"
+            "ssl": "Use SSL when available",
+            "version": {
+              "below": "9i or below",
+              "above": "9i above"
+            }
           },
           "couchdb": {
             "ssl": "Use SSL/TLS when available"
